# stm32-cmake

./: .gitignore  README.mediawiki  build_settings.cmake  build_settings_cmsis_and_std_f1.cmake  gcc_stm32.cmake  gcc_stm32_common.cmake  gcc_stm32_sizeutil.cmake  gcc_stm32f0.cmake  gcc_stm32f1.cmake  gcc_stm32f2.cmake  gcc_stm32f4.cmake  mgiaco_patch.patch
cmake/: locate_stdperiph_source.cmake
cmake/Modules/: DecHex.cmake  FindCMSIS.cmake  FindStdPeriphLib.cmake  LocateSTMUtil.cmake
cmsis/: CMakeLists.txt  read.me  stm32f0_flash.ld.in  stm32f0_memory.ld.in  stm32f1_flash.ld.in  stm32f1_memory.ld.in  stm32f2_flash.ld.in  stm32f2_memory.ld.in  stm32f2_sections.ld.in  stm32f4_flash.ld.in  stm32f4_memory.ld.in  stm32f4_sections.ld.in  stm32fx_flash.ld.in  stm32fx_sys.c
stdperiph/: CMakeLists.txt  read.me
stm32-blinky/: fabfile.py  read.me
